Modifying make file

--- a/LLVMBasedFuzzer/Fuzzer/test/Makefile
+++ b/LLVMBasedFuzzer/Fuzzer/test/Makefile
@@ -4,8 +4,8 @@ all: ${TARGETS}
 
 %: %.c
 	clang -emit-llvm -S -fno-discard-value-names -c -o $@.ll $< -g
-	opt -load ../build/InstrumentPass.so -Instrument -S $@.ll > $@.instrumented.ll
-	clang -o $@ -L${PWD}/../build -lruntime -lm $@.instrumented.ll
+	opt -load ../../build/Fuzzer/libInstrumentPass.so -Instrument -S $@.ll > $@.instrumented.ll
+	clang -o $@ -L${PWD}/../../build/Fuzzer -lruntime -lm $@.instrumented.ll
 
 clean:
 	rm -f *.ll *.cov ${TARGETS}
